# ReLoop

./: .gitignore  LICENSE  README.md  README_AGENT.md  RELOOP_COMPLETE_SYSTEM.md  analyze_chat_logs.py  analyze_layers.py  code.py  get_optimal.py  gurobi_sft.jsonl  pyproject.toml  readme.txt  reloop_test.ipynb  requirements.local-inference.txt  requirements.txt  run_ablation.py  run_one.py  run_test.bat  run_test_env.py  run_test_with_log.py  suite_all.txt  summarize_qwen3_results.py  temp_code.py
.claude/: settings.local.json
SelfEvolvedReLoop/: README.md  __init__.py  cli.py  controller.py  doc_loader.py  llm.py  model_ir.py  prompt_assembler.py  skill_runtime.py  skills_manifest.yaml  state.py  tech_report.md  utils.py
data/: IndustryOR_fixedV2.jsonl  MAMO_ComplexLP_fixed.jsonl  MAMO_EasyLP_fixed.jsonl  NL4OPT.jsonl  OptMATH_Bench_166.jsonl  OptMATH_Bench_193.jsonl  OptiBench.jsonl  RetailOpt-190.jsonl  test_diet_transport.jsonl  test_mamo5.jsonl  test_retail5.jsonl
docs/: CHANGES.md  CONTRIBUTIONS.md  README_AGENT.md
eval/: benchmark_results.csv  evaluate_with_probes.py  run_benchmark.py
logs/: retail_f1_base_v4_gpt-4o_20260126_124304.json  retail_f1_base_v4_gpt-4o_20260126_124520.json
reloop/: __init__.py  behavioral_verification.py  data_extraction.py  diagnosis_repair.py  error_patterns.py  executor.py  experiment_runner.py  generation.py  l2_direction.py  l4_adversarial.py  param_utils.py  perturbation.py  pipeline.py  prompts.py  reloop.py  repair.py  repair_safety.py  specification.py  structured_generation.py  tmpclaude-de1b-cwd  verification.py
(+1828 files in other folders)
