[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reloop"
version = "0.1.0"
description = "Reloop retail MILP agent stack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gurobipy>=11.0.0",
  "numpy>=1.26.4",
  "pandas>=1.5.3",
  "pyyaml>=6.0.0",
  "requests>=2.32.0",
  "langchain>=1.0.0,<2.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "langchain-openai>=0.1.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "tenacity>=9.1.0",
  "tiktoken>=0.12.0",
  "async-timeout>=4.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reloop*"]
